Added: - create post - get many post - create comment - add get comment by id
